Hourly scheduled redeploy 6abbb5d9afa4bed5b105d4d4fd6765fb4c86dbd1

--- a/accessibility.html
+++ b/accessibility.html
@@ -133,10 +133,8 @@
 <li>Some pages skip heading levels, which fails WCAG 2.1 success criteria 1.3.1 Info and Relationships, 2.4.1 Bypass Blocks and 2.4.6 Headings and Labels.</li>
 <li>Some images do not have good alternative text or are missing alternative text, which fails WCAG 2.1 success criterion 1.1.1 Non-text Content.</li>
 </ul>
-<p>There are also parts of this documentation that are not accessible because of <a href="https://tdt-documentation.london.cloudapps.digital/accessibility/#using-the-technical-documentation-template-for-your-own-documentation">issues caused by our Technical Documentation</a>.</p>
-<h2 id='what-were-doing-to-improve-accessibility'>What we’re doing to improve accessibility</h2><p>We plan to fix the issues with the Technical Documentation Template by the end of March 2021.</p>
-<p>We plan to fix the accessibility issues in the content by the end of September 2021.</p>
-<h2 id='preparation-of-this-accessibility-statement'>Preparation of this accessibility statement</h2><p>This statement was prepared on 2 September 2020. It was last reviewed on 30 December 2020.</p>
+<h2 id='what-were-doing-to-improve-accessibility'>What we’re doing to improve accessibility</h2><p>We plan to fix the accessibility issues in the content by the end of September 2021.</p>
+<h2 id='preparation-of-this-accessibility-statement'>Preparation of this accessibility statement</h2><p>This statement was prepared on 2 September 2020. It was last reviewed on 26 March 2021.</p>
 <p>This website was last tested in August 2020. The test was carried out by the technical writing team at GDS. We used the <a href="https://wave.webaim.org/">WAVE Web Accessibility Evaluation Tool</a> and a checklist we created with the help of the GDS accessibility team. We tested a sample of pages from each section of the site.</p>
 
             
