--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -404,16 +404,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
+      <li><a href="http://www.rother.gov.uk" class="govuk-link">Rother District Council</a></li>
+      <li><a href="http://www.nfdc.gov.uk" class="govuk-link">New Forest District Council</a></li>
+      <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
+      <li><a href="http://www.rbkc.gov.uk/" class="govuk-link">Royal Borough of Kensington and Chelsea Council</a></li>
+      <li><a href="https://productrecall.campaign.gov.uk" class="govuk-link">Product Recall - Acting on product safety</a></li>
       <li><a href="http://www.oldham.gov.uk/" class="govuk-link">Oldham Metropolitan Borough Council</a></li>
-      <li><a href="http://www.copelandbc.gov.uk/" class="govuk-link">Copeland Borough Council</a></li>
+      <li><a href="http://www.carrickfergus.org" class="govuk-link">Carrickfergus Borough Council</a></li>
+      <li><a href="http://www.staffsmoorlands.gov.uk" class="govuk-link">Staffordshire Moorlands District Council</a></li>
       <li><a href="http://www.boroughofpoole.com" class="govuk-link">Borough of Poole Council</a></li>
       <li><a href="http://www.bradford.gov.uk" class="govuk-link">City of Bradford Metropolitan District Council</a></li>
-      <li><a href="http://www.uttlesford.gov.uk" class="govuk-link">Uttlesford District Council</a></li>
-      <li><a href="http://www.rbkc.gov.uk/" class="govuk-link">Royal Borough of Kensington and Chelsea Council</a></li>
-      <li><a href="http://www.waverley.gov.uk/" class="govuk-link">Waverley Borough Council</a></li>
-      <li><a href="https://productrecall.campaign.gov.uk" class="govuk-link">Product Recall - Acting on product safety</a></li>
-      <li><a href="http://www.flintshire.gov.uk" class="govuk-link">Flintshire County Council</a></li>
-      <li><a href="https://www.nhs.uk/" class="govuk-link">NHS</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
