--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -404,16 +404,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='imported-documents'>Imported documents</h2><h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.rother.gov.uk" class="govuk-link">Rother District Council</a></li>
-      <li><a href="http://www.nfdc.gov.uk" class="govuk-link">New Forest District Council</a></li>
-      <li><a href="http://www.northumberland.gov.uk" class="govuk-link">Northumberland County Council</a></li>
-      <li><a href="http://www.rbkc.gov.uk/" class="govuk-link">Royal Borough of Kensington and Chelsea Council</a></li>
-      <li><a href="https://productrecall.campaign.gov.uk" class="govuk-link">Product Recall - Acting on product safety</a></li>
-      <li><a href="http://www.oldham.gov.uk/" class="govuk-link">Oldham Metropolitan Borough Council</a></li>
-      <li><a href="http://www.carrickfergus.org" class="govuk-link">Carrickfergus Borough Council</a></li>
-      <li><a href="http://www.staffsmoorlands.gov.uk" class="govuk-link">Staffordshire Moorlands District Council</a></li>
-      <li><a href="http://www.boroughofpoole.com" class="govuk-link">Borough of Poole Council</a></li>
-      <li><a href="http://www.bradford.gov.uk" class="govuk-link">City of Bradford Metropolitan District Council</a></li>
+      <li><a href="http://www.stevenage.gov.uk" class="govuk-link">Stevenage Borough Council</a></li>
+      <li><a href="http://www.gravesham.gov.uk" class="govuk-link">Gravesham Borough Council</a></li>
+      <li><a href="http://www.middevon.gov.uk" class="govuk-link">Mid Devon District Council</a></li>
+      <li><a href="http://www.islington.gov.uk/" class="govuk-link">London Borough of Islington Council</a></li>
+      <li><a href="https://www.malvernhills.gov.uk/" class="govuk-link">Malvern Hills District Council</a></li>
+      <li><a href="http://www.huntsdc.gov.uk" class="govuk-link">Huntingdonshire District Council</a></li>
+      <li><a href="http://www.monmouthshire.gov.uk" class="govuk-link">Monmouthshire County Council</a></li>
+      <li><a href="http://www.antrim.gov.uk/" class="govuk-link">Antrim Borough Council</a></li>
+      <li><a href="http://www.calderdale.gov.uk" class="govuk-link">Calderdale Metropolitan Borough Council</a></li>
+      <li><a href="http://www.glasgow.gov.uk" class="govuk-link">Glasgow City Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
