--- a/document-types/asylum_support_decision.html
+++ b/document-types/asylum_support_decision.html
@@ -378,7 +378,7 @@
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/mya-v-secretary-of-state-for-the-home-department-as-19-02-39259">MYA v Secretary of State for the Home Department: AS/19/02/39259</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/yt-v-secretary-of-state-for-the-home-department-as-18-01-37699">YT v Secretary of State for the Home Department: AS/18/01/37699</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/sm-v-secretary-of-state-for-the-home-department-as-18-12-38967">SM v Secretary of State for the Home Department: AS/18/12/38967</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/ts-v-secretary-of-state-for-the-home-department-as-02-04-2462">TS v Secretary of State for the Home Department: AS/02/04/2462</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/a-e-h-v-secretary-of-state-for-the-home-department-as-05-10-10339">A E-H v Secretary of State for the Home Department: AS/05/10/10339</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/hm-v-secretary-of-state-for-the-home-department-as-15-07-33510">HM v Secretary of State for the Home Department: AS/15/07/33510</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/mas-v-secretary-of-state-for-the-home-department-as-05-05-9315">MAS v Secretary of State for the Home Department: AS/05/05/9315</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/vc-v-secretary-of-state-for-the-home-department-as-02-04-2505">VC v Secretary of State for the Home Department: AS/02/04/2505</a></li>
