--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/282770.es">Exhibición y cata de cervezas premium británicas</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/did-you-know-you-may-be-eligible-to-vote-in-the-eu-referendum--3">Did you know you may be eligible to vote in the EU Referendum?</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--35">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--31">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/doha-college-opens-additional-campus">Doha College opens additional campus</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/171667.pt">Desafio GREAT levará jovens jornalistas `a Londres</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/foreign-secretary-meets-prime-minister-netanyahu-in-israel">Foreign Secretary meets Prime Minister Netanyahu in Israel</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/priority-visas-to-be-opened-up-to-other-categories-for-south-india">Priority visas to be opened up to other categories for South India</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--5">Advice for British nationals in Mumbai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/212818.es">El Gobierno británico anuncia un plan para eliminar la burocracia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/jeremy-hunt-meets-japanese-pm-amid-life-sciences-week">Jeremy Hunt meets Japanese PM amid Life Sciences Week </a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/queen-elizabeth-land-commemorative-coins-released">Queen Elizabeth Land Commemorative Coins released</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/213493.es-419">Misión Comercial Ecuatoriana de Negocios Responsables en Londres</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/229283.es">El Reino Unido ratifica el Tratado sobre el comercio de armas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/britain-is-open-for-business">Britain is open for business</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--9">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/foreign-secretary-statement-on-the-death-of-nelson-mandela">Foreign Secretary statement on the death of Nelson Mandela</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--8">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257368.es-419">Una Semana Británica en Antioquia, Colombia</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
