--- a/document-types/asylum_support_decision.html
+++ b/document-types/asylum_support_decision.html
@@ -378,11 +378,11 @@
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/mya-v-secretary-of-state-for-the-home-department-as-19-02-39259">MYA v Secretary of State for the Home Department: AS/19/02/39259</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/yt-v-secretary-of-state-for-the-home-department-as-18-01-37699">YT v Secretary of State for the Home Department: AS/18/01/37699</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/sm-v-secretary-of-state-for-the-home-department-as-18-12-38967">SM v Secretary of State for the Home Department: AS/18/12/38967</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/a-e-h-v-secretary-of-state-for-the-home-department-as-05-10-10339">A E-H v Secretary of State for the Home Department: AS/05/10/10339</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/hm-v-secretary-of-state-for-the-home-department-as-15-07-33510">HM v Secretary of State for the Home Department: AS/15/07/33510</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/mas-v-secretary-of-state-for-the-home-department-as-05-05-9315">MAS v Secretary of State for the Home Department: AS/05/05/9315</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/vc-v-secretary-of-state-for-the-home-department-as-02-04-2505">VC v Secretary of State for the Home Department: AS/02/04/2505</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/es-v-secretary-of-state-for-the-home-department-as-05-04-9159">ES v Secretary of State for the Home Department: AS/05/04/9159</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/rj-v-secretary-of-state-for-the-home-department-as-15-04-32984">RJ v Secretary of State for the Home Department: AS/15/04/32984</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/aaa-v-secretary-of-state-for-the-home-department-as-04-06-8228">AAA v Secretary of State for the Home Department: AS/04/06/8228</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/hm-v-secretary-of-state-for-the-home-department-as-15-07-33510">HM v Secretary of State for the Home Department: AS/15/07/33510</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=asylum_support_decision&amp;count=10">Source query from Search API</a></p>
 
