--- a/document-types/promotional.html
+++ b/document-types/promotional.html
@@ -378,7 +378,7 @@
 <li><a href="https://www.gov.uk/government/publications/inf1886-can-i-drive-while-my-application-is-with-dvla">Can I drive while my application is with DVLA? (INF188/6)</a></li>
 <li><a href="https://www.gov.uk/government/publications/covid-19-vaccination-women-of-childbearing-age-currently-pregnant-planning-a-pregnancy-or-breastfeeding">COVID-19 vaccination: women of childbearing age, currently pregnant or breastfeeding</a></li>
 <li><a href="https://www.gov.uk/government/publications/the-official-hmrc-app">Check your tax with the official HMRC app</a></li>
-<li><a href="https://www.gov.uk/government/publications/covid-19-vaccination-guide-for-older-adults">COVID-19 vaccination: guide for older adults</a></li>
+<li><a href="https://www.gov.uk/government/publications/covid-19-vaccination-guide-for-older-adults">COVID-19 vaccination: guide for adults</a></li>
 <li><a href="https://www.gov.uk/government/publications/covid-19-vaccination-why-you-are-being-asked-to-wait">COVID-19 vaccination: why you are being asked to wait</a></li>
 <li><a href="https://www.gov.uk/government/publications/staying-covid-19-secure-in-2020-notice">Staying COVID-19 Secure notice</a></li>
 <li><a href="https://www.gov.uk/government/publications/renew-your-passport-online-in-3-easy-steps">Renew your passport online in 3 easy steps</a></li>
