Hourly scheduled redeploy 6abbb5d9afa4bed5b105d4d4fd6765fb4c86dbd1

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/285657.pt">#INFRASTRUCTUREisGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/minister-for-the-middle-east-visits-israel--2">Minister for the Middle East Visits Israel</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/baroness-anelay-visits-colombia-and-panama">Baroness Anelay visits Colombia and Panama</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/247572.es-419">México y el Reino Unido en la Cumbre Mundial para Erradicar la Violencia Sexual en Conflictos Armados</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/national-strategy-for-maritime-security">National Strategy for Maritime Security</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/232335.es-419">Doce universidades británicas visitaron la Argentina</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--6">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/197379.zh-tw">英國貿易文化辦事處休館公告</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/269087.es-419">Servicio del Día del Recuerdo —Remembrance Sunday— de la Embajada Británica en la Ciudad de México</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-statement--3">Turks and Caicos post Cabinet Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/britain-is-open-for-business">Britain is open for business</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/foreign-secretary-statement-on-the-death-of-nelson-mandela">Foreign Secretary statement on the death of Nelson Mandela</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-uk-ambassador-and-permanent-representative-to-the-united-nations-and-other-international-organisations-in-geneva-14-april-2015--2">New UK Ambassador and Permanent Representative to the UN and Other International Organisations in Geneva</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/priority-visas-to-be-opened-up-to-other-categories-for-south-india">Priority visas to be opened up to other categories for South India</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/213493.es-419">Misión Comercial Ecuatoriana de Negocios Responsables en Londres</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/twenty-third-session-of-the-universal-periodic-review-geneva-2-to-13-november-2015--2">Twenty-Third Session of the Universal Periodic Review, Geneva, 2 to 13 November 2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--35">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--9">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--31">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-applicant-arrested-for-fraud--2">UK Visa Applicant Arrested for Fraud</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
