Hourly scheduled redeploy 54693054192c97462852993eb1e9137d4e0f5977

--- a/apps/specialist-publisher.html
+++ b/apps/specialist-publisher.html
@@ -497,6 +497,7 @@ this, you need to grant user permissions in this application:</p>
 <li><a href="/apps/specialist-publisher/email-alerts.html">Email alerts</a></li>
 <li><a href="/apps/specialist-publisher/tasks.html">Rake tasks</a></li>
 <li><a href="/apps/specialist-publisher/creating-a-new-specialist-document-type.html">Creating a new specialist document type</a></li>
+<li><a href="/apps/specialist-publisher/updating-existing-organisation-data.html">Updating existing organisation data</a></li>
 <li><a href="https://github.com/alphagov/specialist-publisher/blob/master/docs/phase-2-migration/README.md">Historical info about migrating to use the Publishing API</a></li>
 </ul>
 <p></div></p>
