Hourly scheduled redeploy 5bed2d2aa421e19fcde3fba84225afb26b67fc47

--- a/apps/static.html
+++ b/apps/static.html
@@ -486,7 +486,7 @@ development VM it&rsquo;s possible to increase the <code>proxy_read_timeout</cod
 
 <p>Tests can run in browser at <code>/specs</code></p>
 
-<p>Or in terminal to run only the jasmine tests you can use <code>RAILS_ENV=test bundle exec rake jasmine:ci</code></p>
+<p>Or in terminal to run only the jasmine tests you can use <code>RAILS_ENV=test bundle exec rake jasmine:ci</code> or in Docker <code>govuk-docker run -e RAILS_ENV=test static-lite bundle exec rake jasmine:ci</code></p>
 <p></div></p>
 
 
