--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -371,16 +371,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.barking-dagenham.gov.uk">London Borough of Barking and Dagenham Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.cheltenham.gov.uk">Cheltenham Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.redbridge.gov.uk/">London Borough of Redbridge Council</a></li>
-<li><a href="https://www.gov.ukhttp//findyourmp.parliament.uk/">Find your MP - UK Parliament</a></li>
-<li><a href="https://www.gov.ukhttp//www.iwight.com">Isle of Wight Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.aylesburyvaledc.gov.uk/">Aylesbury Vale District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.york.gov.uk">York City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bromsgrove.gov.uk">Bromsgrove District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.manchester.gov.uk">Manchester City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bolton.gov.uk">Bolton Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.nfdc.gov.uk">New Forest District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.rbkc.gov.uk/">Royal Borough of Kensington and Chelsea Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.waverley.gov.uk/">Waverley Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.organdonation.nhs.uk/">Organ donation</a></li>
+<li><a href="https://www.gov.ukhttp//www.shetland.gov.uk">Shetland Islands Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.cyberaware.gov.uk">Cyber Aware</a></li>
+<li><a href="https://www.gov.ukhttp//www.telford.gov.uk">Telford &amp; Wrekin Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.rother.gov.uk">Rother District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.northdown.gov.uk">North Down Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
