--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-application-centre-changes-location--2">UK Visa Application Centre changes location</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/197379.zh-tw">英國貿易文化辦事處休館公告</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-muscat-condolence-book-for-the-baroness-thatcher-of-kesteven">British Embassy Muscat: Condolence book for the Baroness Thatcher of Kesteven</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/289211.pt">CARIOCAS GLOBAIS</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-cairo-closed-to-the-public--3">British Embassy in Cairo closed to the public</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-ambassador-honours-positive-role-of-gaa-at-london-gala-dinner--2">British Ambassador to Ireland honours role of the Gaelic Athletic Association</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/171850.es-419">G8: Oportunidades para todos, incluyendo Honduras</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/279923.es">El Reino Unido acoge la Cumbre Mundial del Derecho – 23 a 25 de febrero</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-freedom-of-expression-in-cameroon">UK supports Freedom of Expression in Cameroon</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/atlantic-hurricane-season-are-you-prepared--3">Atlantic Hurricane Season: Are you prepared?</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/aviation-security-update">Aviation security update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220711.pt">Alex Ellis quer mais estudantes mineiros no Reino Unido</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/226260.ja">駐日英国大使館の歴史を振り返る写真展を開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/burma-cleaning-up-financial-crime--2">Burma: Cleaning up financial crime</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/climate-change-energy-and-programme-team-in-mexico-city--2">Climate Change, Energy and Programme Team in Mexico City</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/265215.ja">英国ショッピングウィーク　 トークショーを連日開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--16">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220268.lt">Pasaulinis susitikimas: seksualinio smurto stabdymas konfliktuose</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--9">Advice for British nationals in Kolkata</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
