Hourly scheduled redeploy 73ffecbd6bf8dfdcf0623629b0a32d35066170b4

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/289211.pt">CARIOCAS GLOBAIS</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-supports-freedom-of-expression-in-cameroon">UK supports Freedom of Expression in Cameroon</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-cairo-closed-to-the-public--3">British Embassy in Cairo closed to the public</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/260563.pt">Missão Britânica já apoiou 500 empresas do Reino Unido em negócios no Brasil</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/171850.es-419">G8: Oportunidades para todos, incluyendo Honduras</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/279923.es">El Reino Unido acoge la Cumbre Mundial del Derecho – 23 a 25 de febrero</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/eu-member-states-embassies-mark-climate-change-day-in-tashkent">EU Member States’ embassies mark Climate Change Day in Tashkent</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/vacancies-at-the-british-embassy-prague--2">Vacancies at the British Embassy Prague</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--5">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/burma-cleaning-up-financial-crime--2">Burma: Cleaning up financial crime</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-application-centre-changes-location--2">UK Visa Application Centre changes location</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/my-final-blog-muchas-gracias-y-hasta-pronto">My final blog. ¡Muchas gracias y hasta pronto!</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/294453.pt">VISITA REAL</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201030.it">Revisione Competenze UE: via alla terza fase della consultazione</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/264569.es-419">Ministro para Latinoamérica participa en el Chile Day 2014</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/mongol-rally--2">Mongol Rally: travel advice for Ukraine</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/265215.ja">英国ショッピングウィーク　 トークショーを連日開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-british-embassy-and-consulate-will-be-closed--2">British Embassy Santiago and Consulate will be closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--16">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220268.lt">Pasaulinis susitikimas: seksualinio smurto stabdymas konfliktuose</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
