Hourly scheduled redeploy 73ffecbd6bf8dfdcf0623629b0a32d35066170b4

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/188230.pt">Fórum Live Experience  debate novas tendências em mega eventos</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/statement-on-trade-deal-between-eu-and-us">Statement on trade deal between EU and US</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/285657.pt">#INFRASTRUCTUREisGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/big-ideas-get-them-off-the-ground-in-the-uk--2">Big ideas? Get them off the ground in the UK</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/embassy-closure--3">Embassy closure</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/175818.es-419">Estrategia internacional del Reino Unido en materia educativa</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--3">British expatriates - “It’s your vote, don’t lose it”</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/233481.az">Britaniya XİN Rauf Mirqədirovun həbsindən narahatdı</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/tci-post-cabinet-statement--2">Turks and Caicos Islands post Cabinet statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/240429.pt">COMUNICADO AOS INSCRITOS NO WORSHOP &ldquo;ARTE DA CERVEJA BRITÂNICA&rdquo;</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/aviation-security-update">Aviation security update</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/262824.es-419">Visitan México el Príncipe de Gales y la Duquesa de Cornwall</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220711.pt">Alex Ellis quer mais estudantes mineiros no Reino Unido</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/226260.ja">駐日英国大使館の歴史を振り返る写真展を開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/burma-cleaning-up-financial-crime--2">Burma: Cleaning up financial crime</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/climate-change-energy-and-programme-team-in-mexico-city--2">Climate Change, Energy and Programme Team in Mexico City</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/265215.ja">英国ショッピングウィーク　 トークショーを連日開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--16">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220268.lt">Pasaulinis susitikimas: seksualinio smurto stabdymas konfliktuose</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--9">Advice for British nationals in Kolkata</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
