Hourly scheduled redeploy 73ffecbd6bf8dfdcf0623629b0a32d35066170b4

--- a/document-types/local_transaction.html
+++ b/document-types/local_transaction.html
@@ -373,7 +373,7 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/find-covid-19-lateral-flow-test-site">Find out if your area offers rapid lateral flow test sites</a></li>
+<li><a href="https://www.gov.uk/find-covid-19-lateral-flow-test-site">Find a rapid lateral flow test site in your area</a></li>
 <li><a href="https://www.gov.uk/school-term-holiday-dates">School term and holiday dates</a></li>
 <li><a href="https://www.gov.uk/test-and-trace-support-payment">Apply for a Test and Trace Support Payment </a></li>
 <li><a href="https://www.gov.uk/pay-council-tax">Pay your Council Tax</a></li>
