Hourly scheduled redeploy 90ae46d1176d7b9f40f93fe3515d9cb2ba10ca82

--- a/manual/merge-pr.html
+++ b/manual/merge-pr.html
@@ -248,6 +248,7 @@ board</a>.</p>
 
           <ul class="govuk-list">
             <li><a href="/manual/configure-github-repo.html">Configure a GitHub repo</a></li>
+            <li><a href="/manual/howto-switch-default-branch.html">How to switch a Git default branch from master to main</a></li>
             <li><a href="/manual/make-github-repo-private.html">Make a GitHub repo private</a></li>
           </ul>
         </div>
