--- a/manual.html
+++ b/manual.html
@@ -562,6 +562,7 @@
     <h3>How to...</h3>
     <ul>
         <li><a href="/manual/configure-github-repo.html">Configure a GitHub repo</a></li>
+        <li><a href="/manual/howto-switch-default-branch.html">How to switch a Git default branch from master to main</a></li>
         <li><a href="/manual/make-github-repo-private.html">Make a GitHub repo private</a></li>
         <li><a href="/manual/merge-pr.html">Merge a Pull Request</a></li>
     </ul>
