--- a/manual/github.html
+++ b/manual/github.html
@@ -178,6 +178,7 @@ contribute to a repo.</p>
 
           <ul class="govuk-list">
             <li><a href="/manual/configure-github-repo.html">Configure a GitHub repo</a></li>
+            <li><a href="/manual/howto-switch-default-branch.html">How to switch a Git default branch from master to main</a></li>
             <li><a href="/manual/make-github-repo-private.html">Make a GitHub repo private</a></li>
             <li><a href="/manual/merge-pr.html">Merge a Pull Request</a></li>
           </ul>
