--- a/manual/repository-mirroring.html
+++ b/manual/repository-mirroring.html
@@ -179,6 +179,7 @@
 
           <ul class="govuk-list">
             <li><a href="/manual/configure-github-repo.html">Configure a GitHub repo</a></li>
+            <li><a href="/manual/howto-switch-default-branch.html">How to switch a Git default branch from master to main</a></li>
             <li><a href="/manual/make-github-repo-private.html">Make a GitHub repo private</a></li>
             <li><a href="/manual/merge-pr.html">Merge a Pull Request</a></li>
           </ul>
